# downloader_manager

app/: .gitignore  Cargo.toml  README.md  build.rs
app/src/: downloader.rs  main.rs  merger.rs  models.rs  server.rs
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
