[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "downloader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
indicatif = { version = "0.17", features = ["tokio"] }
futures = "0.3"
anyhow = "1"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
